Telas sem lógica ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,17 @@
     <string name="menu_listar_produtos">Listar produtos</string>
     <string name="menu_alterar_produto">Alterar produto</string>
     <string name="menu_deletar_produto">Deletar produtos</string>
+    <string name="create_title"> CADASTRAR PRODUTO</string>
+    <string name="update_title"> ALTERAR PRODUTO</string>
+    <string name="create_update_codigo_produto">Código do produto:</string>
+    <string name="create_update_nome_produto">Nome produto:</string>
+    <string name="create_update_descricao_produto">Descrição do produto:</string>
+    <string name="create_update_estoque_produto">Estoque</string>
+    <string name="create_update_clean">Limpar</string>
+    <string name="create_save">Salvar</string>
+    <string name="alterar_save">Alterar</string>
+    <string name="deletar_title">DELETAR PRODUTO</string>
+    <string name="deletar">Deletar</string>
+    <string name="listar_title">LISTA DE PRODUTO</string>
+    <string name="voltar_btn">Voltar</string>
 </resources>
